Convert List to ImmutableList in PushSplitBelowAggregate